fix(dropdowns): increase contrast of dropdown header

--- a/assets/stylesheets/bootstrap/_variables.scss
+++ b/assets/stylesheets/bootstrap/_variables.scss
@@ -298,7 +298,7 @@ $dropdown-link-active-bg:        $component-active-bg !default;
 $dropdown-link-disabled-color:   $gray500 !default;
 
 //** Text color for headers within dropdown menus.
-$dropdown-header-color:          $gray600 !default;
+$dropdown-header-color:          $gray700 !default;
 
 //** Deprecated `$dropdown-caret-color` as of v3.1.0
 $dropdown-caret-color:           #fff !default;
